fix overflowing elements

--- a/src/styles/home-page-styles.css
+++ b/src/styles/home-page-styles.css
@@ -12,28 +12,6 @@ animation code stuff area below*/
   100% { transform: translateY(0); }
 }
 
-@keyframes slide-bounce {
-  0% {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  20% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-  40% {
-    transform: translateY(-10px);
-  }
-  60% {
-    transform: translateY(5px);
-  }
-  80% {
-    transform: translateY(-2px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
 @keyframes slide {
   from {
     transform: translateX(-100%);
@@ -55,28 +33,7 @@ animation code stuff area below*/
     opacity: 1;
   }
 }
-@keyframes offset-slide-bounce {
-  0% {
-    transform: translate(-100%, 0.5vw);
-    opacity: 0;
-  }
-  20% {
-    transform: translate(0.5vw, 0.5vw);
-    opacity: 1;
-  }
-  40% {
-    transform: translate(0.5vw, -0.5vw);
-  }
-  60% {
-    transform: translate(0.5vw, 0.75vw);
-  }
-  80% {
-    transform: translate(0.5vw, 0.25vw);
-  }
-  100% {
-    transform: translate(0.5vw, 0.5vw);
-  }
-}
+
 
 
 body {
@@ -87,20 +44,22 @@ body {
 }
 
 .game-title-container {
-  align-self: center;
-  top: 25vh;
-  left: 20vw;
-  right: 20vw;
-  padding: 1vmax;
   position: relative;
+  top: 25vh;
+  max-width: 60vw;
+  margin: 0 auto;
+  padding: 1vmax;
   border-radius: 1vmin;
   color: white;
-  align-items: center;
+  text-align: center;
+}
+* {
+  outline: 1px solid red;
 }
 
 .game-title {
   font-family: 'Luckiest Guy', cursive;
-  animation: slide 1s, bounce 1s ease-in-out infinite;
+  animation: slide 1s;
   font-weight: 400;
   font-size: 7vw;
   color: white;
@@ -113,7 +72,7 @@ body {
 }
 .game-title-offset { /*highkey shouldnt have as much repetition as the prev for style but whsatever*/
   font-family: 'Luckiest Guy', cursive;
-  animation: offset-slide-bounce 1s;
+  animation: offset-slide 1s;
   font-weight: 400;
   font-size: 7vw;
   color: black;
@@ -148,4 +107,9 @@ body {
   color: black;
   text-align: center;
 
+}
+
+.instructions-header {
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 200%;
 }
